--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   zego_uikit_prebuilt_call: ^4.14.3
   table_calendar: ^3.1.2
   provider: ^6.1.2
+  flutter_spinkit: ^5.2.1
   # image auth packages
 
 dev_dependencies:
