--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   table_calendar: ^3.1.2
   provider: ^6.1.2
   flutter_spinkit: ^5.2.1
+  connectivity_plus: ^6.1.1
   # image auth packages
 
 dev_dependencies:
