--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   connectivity_plus: ^6.1.1
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
+  path_provider: ^2.0.15
   # image auth packages
 
 dev_dependencies:
