UI Responsive changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "Colours",
         "Employeeservice"
-    ]
+    ],
+    "cmake.sourceDirectory": "N:/Dev/Flutter/Attendance AP/attend-ease/app/linux"
 }
