--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
   path_provider: ^2.0.15
+  skeletonizer: ^1.4.2
   # image auth packages
 
 dev_dependencies:
