--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -56,24 +56,38 @@ dependencies:
   cached_network_image: ^3.4.1
   path_provider: ^2.0.15
   skeletonizer: ^1.4.2
+  flutter_native_splash: ^2.4.1
   # image auth packages
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.jpg"
+
+flutter_native_splash:
+  android: true
+  ios: true # Add this if you want iOS support as well
+  color: "#E6F9F5"
+  image: "assets/splash.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  # flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
